Prevent iOS font-size overrides
Apparently mobile Safari makes text larger if it feels it is too small:
https://stackoverflow.com/questions/6210788/how-to-avoid-ios-automatic-font-size-adjustment

Fixes #37

--- a/source/assets/scss/reset.scss
+++ b/source/assets/scss/reset.scss
@@ -29,6 +29,10 @@ html {
   line-height: 1;
 }
 
+body {
+  -webkit-text-size-adjust: 100%;
+}
+
 ol, ul {
   list-style: none;
 }
